apps/nshop-yatcha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nshop-yatcha-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nshop-yatcha.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nshop-yatcha
            port:
              number: 80
